Fix cancel search icon position on mobile

--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -191,4 +191,8 @@ a.search-results-result-link {
         left: calc(0px);
         width: calc(100% - 20px);
     }
+
+    .cancel-search-icon {
+        right: calc(6px + 10px);
+    }
 }
